feat: Complete Database-Driven Questionnaire System v0.4.0
- ✅ Complete 39-question questionnaire system with database storage
- ✅ Cinematic category headers with animated displays and descriptions
- ✅ Admin management interface for CRUD operations on questions
- ✅ Production URL migration (localhost → vbn.talkingheads.video)
- ✅ Admin panel integration with questionnaire management link
- ✅ 17 categories: Pre-Embrace, Post-Embrace, Embrace, Personality, etc.
- ✅ Clan scoring system with proper weight distribution
- ✅ Database-driven questionnaire with JavaScript integration

Files Added:
- questionnaire_questions database table
- questionnaire_admin.php (admin interface)
- character_questionnaire_database.php (database-driven questionnaire)
- js/questionnaire_database.js (database JavaScript)
- populate_complete_39_questions.php (39-question population)
- update_categories.php (category management)
- show_categories.php (category display)

Technical Improvements:
- All localhost references replaced with production URLs
- Admin panel enhanced with questionnaire statistics
- CSS styling for questionnaire admin interface
- Version incremented to 0.4.0 for minor feature release

--- a/config.env.example
+++ b/config.env.example
@@ -2,15 +2,15 @@
 # Copy this to config.env and update with your actual settings
 
 # Database Configuration (XAMPP)
-DB_HOST=localhost
+DB_HOST=vdb5.pit.pair.com
 DB_USER=root
 DB_PASS=
 DB_NAME=lotn_characters
 
 # Python API Configuration
-PYTHON_API_HOST=localhost
+PYTHON_API_HOST=vbn.talkingheads.video
 PYTHON_API_PORT=5000
-PYTHON_API_URL=http://localhost:5000
+PYTHON_API_URL=http://vbn.talkingheads.video/api
 
 # Development Settings
 DEBUG=true
